<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/size_margin"
        android:text="@string/warning_text"
        android:textSize="@dimen/size_font" />

    <TextView
        android:id="@+id/textViewAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_margin"
        android:text="@string/unknown"
        android:textSize="@dimen/size_font" />

    <Button
        android:id="@+id/buttonShowAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_show_answer" />

</LinearLayout>